# Observatorio-zmvm

./: .gitattributes  .gitignore  CMakeLists.txt  Compilar_Tlalpowa.cmd  Instalar_Dependencias_Globales_Tlalpowa.cmd  Publicar_Tlalpowa.cmd  directorio.pyw  index.html  main.css  main.js
Datos/: 0000_01.ixiptlah  1986_01.ixiptlah  1987_01.ixiptlah  1988_01.ixiptlah  1989_01.ixiptlah  1990_01.ixiptlah  1991_01.ixiptlah  1992_01.ixiptlah  1993_01.ixiptlah  1994_01.ixiptlah  1995_01.ixiptlah  1996_01.ixiptlah  1997_01.ixiptlah  1998_01.ixiptlah  1999_01.ixiptlah  2000_01.ixiptlah  2001_01.ixiptlah  2002_01.ixiptlah  2003_01.ixiptlah  2004_01.ixiptlah  2005_01.ixiptlah  2006_01.ixiptlah  2007_01.ixiptlah  2008_01.ixiptlah  2009_01.ixiptlah  2010_01.ixiptlah  2011_01.ixiptlah  2012_01.ixiptlah  2013_01.ixiptlah  2014_01.ixiptlah  2015_01.ixiptlah  2016_01.ixiptlah  2017_01.ixiptlah  2018_01.ixiptlah  2019_01.ixiptlah  2020_01.ixiptlah  2021_01.ixiptlah  2021_02.ixiptlah  2021_03.ixiptlah  2021_04.ixiptlah  (+58 more)
Dependencias/: dependencies.local.json
Fuente/: AtmosphereModel.cpp  AtmosphereModel.hpp  Config.cpp  Config.hpp  Dashboard.cpp  Dashboard.hpp  EpiTypes.cpp  EpiTypes.hpp  ExternalTools.cpp  ExternalTools.hpp  GuiLauncher.cpp  Ixiptlah.cpp  Ixiptlah.hpp  Launcher.cpp  PdfExtractor.cpp  PdfExtractor.hpp  Pipeline.cpp  Pipeline.hpp  TableEngine.cpp  TableEngine.hpp  TemporalBlocks.cpp  TemporalBlocks.hpp  TextUtils.cpp  TextUtils.hpp  Writers.cpp  Writers.hpp  app_icon.rc  core.c  core.h  main.cpp
Fuente/Config/: ACTUALIZACIONES_CONSOLIDADAS_VIGENTES_2026_05_28.md  atmosfera_cache_analitico_policy.json  atmosfera_contaminantes.tsv  atmosfera_modelado_fuentes.json  atmosfera_qc_rules.json  atmosfera_schema.json  atmosfera_visual_representatividad_policy.json  atmosfera_visual_sem#U251c#U00edforo_policy.json  diseases.tsv  diseases_historial.tsv  download_performance_policy.json  import_cleanup_dark_download_policy.json  ixiptlah_fast_render_policy.json  ixiptlah_unified_monthly_binary_policy.json  jurisdictions.tsv  metro_cronologia_red.json  modelado_atmosferico_arquitectura.md  movilidad_red_integrada_base.jsonl  performance_runtime_policy.json  pipeline.policy.md  satelites_atmosfericos_policy.json  timeline_schema.json
Fuente/Config/geo/: Descargar_gazetteer_geonames_mx.cmd  README.md  README_poblados.md  mapa_cache_3d_policy.json  metadata.json  poblados_centro_mexico.tsv  poblados_extendido.tsv  poblados_regionales.tsv  poblados_zmvm.tsv  pueblos_originarios_cdmx.tsv  relieve_zmvm_50km.json  zmvm.geojson  zmvm_buffer_10km.geojson  zmvm_buffer_20km.geojson  zmvm_buffer_50km.geojson
Fuente/Config/geo/historicos/: Descargar_fuentes_oficiales_lagos.cmd  fuentes_autoritativas_lagos.json  valle_mexico_lagos_tlalpowa.kml  valle_mexico_lagos_tlalpowa.kmz
Fuente/Tools/: Convert-PngToIco.ps1  Generate-IndexHtml.cmake  tlalpowa_icon_polarizer.cpp
Fuente/Web/: index.template.html  main.css  main.js  main.template.css  main.template.js
